--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
 :root {
-	
+
 }
 
 body {
 	font-family: "Roboto", sans-serif;
 	color: #434455;
 	background-color: #FFFFFF;
+}
+
+.link {
+	font-family: "Raleway", sans-serif;
+	font-weight: 800;
+	font-size: 18px;
+	line-height: 1.17;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: #4d5ae5;
+	text-decoration: none;
+}
+
+.link__part {
+	color: #2e2f42;
 }
