--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 	background-color: #FFFFFF;
 }
 
-.link {
+.logo {
 	font-family: "Raleway", sans-serif;
 	font-weight: 800;
 	font-size: 18px;
@@ -16,11 +16,14 @@ body {
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 	color: #4d5ae5;
-	text-decoration: none;
 }
 
 .logo__part {
 	color: #2e2f42;
+}
+
+.link {
+	text-decoration: none;
 }
 
 .list {
