--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 	color: #2e2f42;
 }
 
-.part1 {
+.part__one {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
@@ -59,7 +59,7 @@ body {
 	color: #404bbf;
 }
 
-.part1:hover {
+.part__one:hover {
 	color: #404bbf;
 }
 
@@ -67,7 +67,7 @@ body {
 	color: #404bbf;
 }
 
-.part1:focus {
+.part__one:focus {
 	color: #404bbf;
 }
 
