--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,12 @@ body {
 	letter-spacing: 0.02em;
 	color: #434455;
 }
+
+.section__three__title {
+	font-size: 36px;
+	line-height: 1.11;
+	text-align: center;
+	letter-spacing: 0.02em;
+	text-transform: capitalize;
+	color: #2e2f42;
+}
