--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,21 @@ body {
 	letter-spacing: 0.02em;
 	color: #434455;
 }
+
+.footer {
+	background-color: #2e2f42;
+}
+
+.footer__logo {
+	font-family: "Raleway", sans-serif;
+	font-weight: 800;
+	font-size: 18px;
+	line-height: 1.17;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: #4d5ae5;
+}
+
+.footer__logo__part {
+	color: #f4f4fd;
+}
