--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ body {
 	letter-spacing: 0.04em;
 	color: #4d5ae5;
 	background-color: #F4F4FD;
+	cursor: pointer;
 }
 
 .portfolio__button:hover {
