--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,18 @@ body {
 	color: #FFFFFF;
 	background-color: #404BBF;
 }
+
+.portfolio__title {
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 1.2;
+	letter-spacing: 0.02em;
+	color: #2e2f42;
+}
+
+.portfolio__description {
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #434455;
+}
